# polimedica_assessment

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.dev.yaml  pyproject.toml  requirements.txt  run.py  setup.cfg
fake_db_data/: factories.py  main.py
src/: application.py
src/api/: exception_handlers.py  exceptions.py
src/api/routers/: __init__.py  course.py  grade.py  student.py  teacher.py
src/api/schemas/request/: course.py  exam.py  student.py
src/api/schemas/response/: course.py  exam.py  student.py  teacher.py
src/configs/: __init__.py  db.py  environment.py
src/db/crud/: base.py  course.py  exam.py  student.py  teacher.py
src/db/migrations/: env.py
src/db/migrations/versions/: 2023-06-08_17.48_initial.py  2023-06-08_21.17_initial.py
src/db/models/: __init__.py  base.py  building.py  classroom.py  course.py  course_programme.py  course_teacher.py  curriculum.py  department.py  exam.py  faculty.py  grade.py  group.py  independent_assignment.py  semester.py  student.py  teacher.py  timetable.py
